--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a> | <a href="#">Clients</a></p>
     </footer>
 </div> <!-- end footer wrapper -->
+<script src="js/scripts.js"></script>
    
 </body>
 </html> 
