--- a/index.html
+++ b/index.html
@@ -39,15 +39,48 @@
 
 <div id="mainWrapper">
     <main>
+        <h1>Menu</h1>
+        <div class="allcards">
+            <section>
+                <h2>Appetizers</h2>
+                <img src="images/chips.webp" alt="chips" width="300" height="169">
+                <p>Start your meal with a selection of mouthwatering appetizers designed to tease your taste buds.</p>
+                <a href="#">Learn More</a>
+            </section>
 
-        <h1>Best Practices</h1>
-   
-        <p>Competently myocardinate cross-media infomediaries via end-to-end architectures. Enthusiastically implement end-to-end functionalities vis-a-vis excellent strategic theme areas. Conveniently supply enterprise action items with integrated innovation. Authoritatively cultivate sustainable portals for orthogonal core competencies. Distinctively coordinate team driven portals rather than synergistic processes.</p>
+            <section>
+                <h2>Breakfast</h2>
+                <img src="images/breakfast.webp" alt="breakfast" width="300" height="169">
+                <p>The breakfast menu is packed with both classic and creative options to fuel your day.</p>
+                <a href="#">Learn More</a>
+            </section>
 
-        <p>Appropriately simplify enterprise information via leveraged total linkage. Progressively grow installed base infrastructures without open-source technologies. Distinctively embrace mission-critical internal or "organic" sources after competitive imperatives. Professionally whiteboard state of the art models through high-payoff expertise. Authoritatively exploit transparent users through virtual channels.</p>
+            <section>
+                <h2>Hamburger</h2>
+                <img src="images/hamburgers.webp" alt="Hamburger" width="300" height="169">
+                <p>Our hamburgers are made with 100% beef patties, grilled to perfection and loaded with toppings.</p>
+                <a href="#">Learn More</a>
+            </section>
 
-        <p>Interactively transition user-centric web services without scalable collaboration and idea-sharing. Holisticly restore next-generation data before seamless expertise. Monotonectally grow synergistic synergy without bricks-and-clicks ROI. Uniquely optimize 24/365 convergence after integrated synergy. Distinctively synthesize high-quality methodologies for performance based bandwidth.</p>
+            <section>
+                <h2>Pizza</h2>
+                <img src="images/pizza.webp" alt="pizza" width="300" height="169">
+                <p>Our pizzas are crafted with hand-tossed dough, rich tomato sauce, and a variety of fresh toppings to suit any preference.</p>
+                <a href="#">Learn More</a>
+            </section>
 
+            <section>
+                <h2>Dessert</h2>
+                <img src="images/dessert.webp" alt="dessert" width="300" height="169">
+                <p>End your meal on a sweet note with our indulgent dessert options. </p>
+                <a href="#">Learn More</a>
+            </section>
+
+        
+
+
+
+        </div>
      
 
     </main>
