--- a/index.html
+++ b/index.html
@@ -44,35 +44,37 @@
             <section>
                 <h2>Appetizers</h2>
                 <img src="images/chips.webp" alt="chips" width="300" height="169">
-                <p>Start your meal with a selection of mouthwatering appetizers designed to tease your taste buds.</p>
+                <p>Start your meal with a selection of mouthwatering appetizers designed to tease your taste buds. These starters set the perfect tone for a great meal ahead.
+                </p>
                 <a href="#">Learn More</a>
             </section>
 
             <section>
                 <h2>Breakfast</h2>
-                <img src="images/breakfast.webp" alt="breakfast" width="300" height="169">
-                <p>The breakfast menu is packed with both classic and creative options to fuel your day.</p>
+                <img src="images/breakfast.webp" alt="breakfast" width="300" height="169" class="e2e">
+                <p>The breakfast menu is packed with both classic and creative options to fuel your day. Fluffy pancakes drizzled with syrup, eggs cooked any style, and perfectly crisp bacon are just the beginning.</p>
                 <a href="#">Learn More</a>
             </section>
 
             <section>
                 <h2>Hamburger</h2>
                 <img src="images/hamburgers.webp" alt="Hamburger" width="300" height="169">
-                <p>Our hamburgers are made with 100% beef patties, grilled to perfection and loaded with toppings.</p>
+                <p>Our hamburgers are made with 100% beef patties, grilled to perfection and loaded with toppings.Served with a side of crispy fries or onion rings, our burgers are a must-try for those craving a satisfying and hearty meal.</p>
                 <a href="#">Learn More</a>
             </section>
 
             <section>
                 <h2>Pizza</h2>
-                <img src="images/pizza.webp" alt="pizza" width="300" height="169">
-                <p>Our pizzas are crafted with hand-tossed dough, rich tomato sauce, and a variety of fresh toppings to suit any preference.</p>
+                <img src="images/pizza.webp" alt="pizza" width="300" height="169" class="e2e">
+
+                <p>Our pizzas are crafted with hand-tossed dough, rich tomato sauce, and a variety of fresh toppings to suit any preference. Perfect for sharing or enjoying solo, our pizzas are a highlight of the menu.</p>
                 <a href="#">Learn More</a>
             </section>
 
             <section>
                 <h2>Dessert</h2>
                 <img src="images/dessert.webp" alt="dessert" width="300" height="169">
-                <p>End your meal on a sweet note with our indulgent dessert options. </p>
+                <p>End your meal on a sweet note with our indulgent dessert options. These desserts are the perfect way to treat yourself after a great meal.</p>
                 <a href="#">Learn More</a>
             </section>
 
