added new image

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div id="headerWrapper">
 	<header>
         <img src="images/logo1x.png" alt="logo">
-		<span>Design Thinking</span>
+		<span>BROKIES</span>
 	</header>
 </div><!-- end header wrapper -->
 
