--- a/index.html
+++ b/index.html
@@ -90,8 +90,27 @@
     
 <div id="footerWrapper">
     <footer>
-        <p>Copyright &copy; 2025 Design Thinking Inc. All rights reserved. 
-            <a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a> | <a href="#">Clients</a></p>
+        <div>
+            <section class="contact">
+                <p>Jonny Brooks</p>
+                <p>Brokies</p>
+                <p><a href="mailto:brokies@gmail.com">brokies@gmail.com</a></p>
+                <p><a href="https:brokies.com">brokies.com</a></p>
+                <p><a href="tel:8012384232">801-238-4232</a></p>
+            </section>
+            <section class="social">
+                <a href="#">Facebook</a>
+                <a href="#">Twitter</a>
+                <a href="#">Instagram</a>
+                <a href="#">YouTube</a>
+            </section>
+            <section class="location">
+                <address> 123 W Jolly Cir <br> American Fork <br> Ut, 83021</address>
+            </section>
+        </div>
+
+        <p>Copyright &copy; <span id="year">inject</span> &bull; Carter Bohin 
+           
     </footer>
 </div> <!-- end footer wrapper -->
 <script src="js/scripts.js"></script>
