--- a/index.html
+++ b/index.html
@@ -92,28 +92,29 @@
     <footer>
         <div>
             <section class="contact">
-                <p>Jonny Brooks</p>
-                <p>Brokies</p>
-                <p><a href="mailto:brokies@gmail.com">brokies@gmail.com</a></p>
-                <p><a href="https:brokies.com">brokies.com</a></p>
-                <p><a href="tel:8012384232">801-238-4232</a></p>
+                <p><ion-icon name="accessibility-outline"></ion-icon>Jonny Brooks</p>
+                <p><a href="mailto:brokies@gmail.com"><ion-icon name="mail-outline"></ion-icon>brokies@gmail.com</a></p>
+                <p><a href="https:brokies.com"><ion-icon name="planet-outline"></ion-icon>brokies.com</a></p>
+                <p><a href="tel:8012384232"><ion-icon name="call-outline"></ion-icon>801-238-4232</a></p>
             </section>
             <section class="social">
-                <a href="#">Facebook</a>
-                <a href="#">Twitter</a>
-                <a href="#">Instagram</a>
-                <a href="#">YouTube</a>
+                <a href="#"><ion-icon name="logo-facebook"></ion-icon></script></a>
+                <a href="#"><ion-icon name="logo-twitter"></ion-icon></script></a>
+                <a href="#"><ion-icon name="logo-instagram"></ion-icon></script></a>
+                <a href="#"><ion-icon name="logo-youtube"></ion-icon></a>
             </section>
             <section class="location">
-                <address> 123 W Jolly Cir <br> American Fork <br> Ut, 83021</address>
+                <address>123 W Jolly Cir <br> American Fork <br> Ut, 83021</address>
             </section>
         </div>
 
-        <p>Copyright &copy; <span id="year">inject</span> &bull; Carter Bohin 
+        <p class="legal">Copyright &copy; <span id="year">inject</span> &bull; Carter Bohin 
            
     </footer>
 </div> <!-- end footer wrapper -->
 <script src="js/scripts.js"></script>
-   
+
+<script src="https://unpkg.com/ionicons@7.1.0/dist/ionicons.js"></script>
+
 </body>
 </html> 
