--- a/index.html
+++ b/index.html
@@ -102,13 +102,14 @@
                 <a href="#"><ion-icon name="logo-twitter"></ion-icon></script></a>
                 <a href="#"><ion-icon name="logo-instagram"></ion-icon></script></a>
                 <a href="#"><ion-icon name="logo-youtube"></ion-icon></a>
+                <a href="#"><ion-icon name="logo-tiktok"></ion-icon></a>
             </section>
             <section class="location">
                 <address>123 W Jolly Cir <br> American Fork <br> Ut, 83021</address>
             </section>
         </div>
 
-        <p class="legal">Copyright &copy; <span id="year">inject</span> &bull; Carter Bohin 
+        <p class="legal">Copyright &copy; <span id="year">2024</span> &bull; Carter Bohin 
            
     </footer>
 </div> <!-- end footer wrapper -->
