--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <nav>
         <button id="myButton"></button>
         <ul class="menuLinks">
-            <li><a href="#">Clients</a></li>
-            <li><a href="#">Services</a></li>
-            <li class="active"><a href="#">Best Practices</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Locations</a></li>
+            <li class="active"><a href="#">Menu</a></li>
             <li><a href="#">Our Team</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
