--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 <div id="headerWrapper">
 	<header>
-        <img src="images/logo1x.png" alt="logo">
+        <a href="index.html"><img src="images/logo1x.png" alt="logo" width="50" height="50" srcset="images/logo1x.png 1x. images/logo2x.png 2x, images/logo3x.png 3x"></a>
 		<span>BROKIES</span>
 	</header>
 </div><!-- end header wrapper -->
